@@ -56,4 +56,4 @@ weak_alias (__hdestroy, hdestroy)
 
 /* Make sure the table is freed if we want to free everything before
    exiting.  */
-//text_set_element (__libc_subfreeres, __hdestroy);
+/*text_set_element (__libc_subfreeres, __hdestroy);*/
