@@ -56,4 +56,4 @@ lfind (const void *key, const void *base, size_t *nmemb, size_t size,
 
   return cnt < *nmemb ? (void *) result : NULL;
 }
-//libc_hidden_def (lfind)
+/*libc_hidden_def (lfind)*/
